# polarg

./: .gitignore  .rsyncinclude  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  openai_schema.json  pyproject.toml  settings.toml
argent/: config.py  convert.py  deploy.py  evaluate.py  split.py  train.py
argent/model/: dataset.py  module.py  openai.py
argument_nli/: config.py  convert.py  deploy.py  evaluate.py  evaluation.py  model.py  split.py  train.py
argument_nli/deploy/: __main__.py  model.py
argument_nli/evaluation/: adaptation.py  prediction.py
argument_nli/model/: annotation.py  dataset.py  module.py  openai.py
argument_nli/train/: __main__.py  model.py
polarg/: convert.py  deploy.py  evaluate.py  metrics.py  split.py  train.py
polarg/model/: __init__.py  annotation.py  dataset.py  llama.py  llm.py  module.py  module_llama.py  openai.py
