[tool.poetry]
name = "Argument-NLI"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2.0"
transformers = "^4.31.0"
datasets = "^2.13.1"
torch = "==2.0.0"
lxml = "^4.9.3"
typer = "^0.9.0"
pandas = "^2.0.3"
arg-services = "^1.4.0"
arguebuf = "^2.1.1"
scikit-learn = "^1.3.0"
stableset = "^5.2.1"
openai = { version = "^1.0.0b1", allow-prereleases = true }
lightning = "^2.0.5"
torchmetrics = "^1.0.1"
sentencepiece = "^0.1.99"
wandb = "^0.15.5"
deepspeed = "^0.10.0"


[tool.poetry.dev-dependencies]
lxml-stubs = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
