[tool.poetry]
name = "polarg"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2"
transformers = "^4.34"
datasets = "^2.14"
torch = "==2.0.0"
lxml = "^4.9"
typer = "^0.9"
pandas = "^2.1"
arg-services = "^1.4"
arguebuf = "^2.4"
scikit-learn = "^1.3"
stableset = "^5.2"
openai = { version = "^1.0.0rc1", allow-prereleases = true }
lightning = "^2.1"
torchmetrics = "^1.2"
sentencepiece = "^0.1"
wandb = "^0.15"
ordered-set = "^4.1"
peft = "^0.5.0"
orjson = "^3.9.10"
mashumaro = "^3.10"
immutables = "^0.20"


[tool.poetry.dev-dependencies]
lxml-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
