[tool.poetry]
name = "polarg"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dynaconf = "^3.2"
transformers = "^4.34"
torch = "==2.0.0"
typer = "^0.9"
arg-services = "^1.5"
arguebuf = "^2.4"
scikit-learn = "^1.3"
openai = "^1.3"
lightning = "^2.1"
torchmetrics = "^1.2"
sentencepiece = "^0.1"
wandb = "^0.15"
orjson = "^3.9.10"
mashumaro = "^3.10"
immutables = "^0.20"
scipy = "^1.11"
numpy = "^1.26"
httpx = { extras = ["http2"], version = "^0.25" }
statsmodels = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
